fix div.opener text-align: right

--- a/tesi_db_style.css
+++ b/tesi_db_style.css
@@ -19,7 +19,7 @@ div.diaryEntry {
     border-width: medium;
     background-color: #e1e1e1;
 }
-div.opener {
+div.opener > p {
 	text-align: right;
 }
 p {
